[project]
name = "GirlsFilm"

authors = [
    { name = "Evil2997", email = "dima.molchanow2012@gmail.com" }
]

version = "1.1.2"
description = "Add your description here"
requires-python = ">=3.12"

dependencies = [
    "anthropic>=0.100.0",
    "browser-cookie3>=0.20.1",
    "instaloader>=4.15.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "requests>=2.33.1",
]

[project.scripts]
date-night = "app.cli:run"
